<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">맘스프리</string>

    <string name="sitter">베이비시터</string>
    <string name="mom">맘</string>
    <string name="search">검색</string>
    
    <string name="http_null_error">네트워크 상태가 불안정합니다. 재시도 바랍니다.</string>
    <string name="load">잠시만 기다려주세요.</string>
    
    <string name="login_title">맘스프리에 오신걸 환영합니다.</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="btn_login">로그인</string>
    <string name="auto_login_chk">자동로그인</string>
    
    <string name="join">회원가입</string>
    <string name="find_email">이메일 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login">로그인</string>
    
    <string name="find_addr_set">현재 위치로 설정</string>
    <string name="find_addr_srch">동명으로 위치 설정</string>
    <string name="find_addr_alert">읍,면,동으로만 검색 가능합니다\n예) 논현동</string>
    
    <string name="join1_title">엄마를 자유롭게, 아이를 행복하게\n맘스프리에 오신 것을 환영합니다.</string>
    <string name="location_info_dialog">확인된 위치를 기준으로\n맘스프리 서비스를 제공해 드립니다.</string>
    
    <string name="webview_network_error">네트워크에 연결되어 있지 않습니다.</string>
    
    <string name="busi_number">직업정보 제공사업 : J1200320130016</string>
    
    <!-- SettingActivity -->
    <string name="setting_menu_1">공지사항</string>
    <string name="setting_menu_2">이용권 구매</string>
    <string name="setting_menu_3">자주묻는 질문</string>
    <string name="setting_menu_4">위치재설정</string>
    <string name="setting_menu_6">이용약관</string>
    <string name="setting_menu_5">알림설정</string>
    <string name="setting_alert_desc">원하는 조건과 70% 이상 매칭되는\n정보가 있을 경우 알려드립니다.</string>
    
    
</resources>


